# gitmigrate

./: .gitignore  LICENSE  config.yaml.template  gitmigrate.cabal  readme.md
src/: .#Bitbucket.hs  Bitbucket.hs  Git.hs  Main.hs  TC.hs  Teamcity.hs  WebApi.hs
