name:                gitmigrate
version:             0.1.0.0
synopsis:            Migrate projects to Bitbucket
homepage:            https://github.com/mattrrichard/gitmigrate
license:             BSD3
license-file:        LICENSE
author:              Matt Richard
copyright:           2017 Matt Richard
build-type:          Simple
cabal-version:       >=1.10

executable gitmigrate
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , lens-aeson
                     , bytestring
                     , text
                     , network-uri
                     , transformers
                     , aeson
                     , yaml
                     , process

  other-modules:     Bitbucket
                   , Teamcity
